# TAYAT_8

./: CMakeLists.txt
include/: Defines.h  Diagram.h  Scaner.h  Tree.h
src/: Diagram.cpp  Scaner.cpp  Tree.cpp  main.cpp
